--- a/src/app/pages/master/transaction/transaction-by-polis-period/transaction-by-polis-period.component.html
+++ b/src/app/pages/master/transaction/transaction-by-polis-period/transaction-by-polis-period.component.html
@@ -121,7 +121,7 @@
         <p>{{trans.premi | commonCurrencyRp }}</p>
       </td>
       <td>
-        <p>{{trans.isClaim}}</p>
+        <p>{{trans.statusClaim}}</p>
       </td>
       <td>
         {{trans.statusPolis}}
