--- a/src/app/pages/master/transaction/transaction-by-polis/transaction-by-polis.component.html
+++ b/src/app/pages/master/transaction/transaction-by-polis/transaction-by-polis.component.html
@@ -85,7 +85,7 @@
           <p>{{trans.premi | commonCurrencyRp}}</p>
         </td>
         <td>
-          <p>{{trans.isClaim}}</p>
+          <p>{{trans.statusClaim}}</p>
         </td>
         <td>
           {{trans.statusPolis}}
@@ -170,7 +170,7 @@
           <p>{{trans.premi | commonCurrencyRp}}</p>
         </td>
         <td>
-          <p>{{trans.isClaim}}</p>
+          <p>{{trans.statusClaim}}</p>
         </td>
         <td>
           {{trans.statusPolis}}
