--- a/src/app/pages/master/transaction/transaction-by-promo/transaction-by-promo.component.html
+++ b/src/app/pages/master/transaction/transaction-by-promo/transaction-by-promo.component.html
@@ -92,7 +92,7 @@
           <p>{{trans.premi | commonCurrencyRp}}</p>
         </td>
         <td>
-          <p>{{trans.isClaim}}</p>
+          <p>{{trans.statusClaim}}</p>
         </td>
         <td>
           {{trans.isPromo}}
@@ -182,7 +182,7 @@
           <p>{{trans.premi| commonCurrencyRp}}</p>
         </td>
         <td>
-          <p>{{trans.isClaim}}</p>
+          <p>{{trans.statusClaim}}</p>
         </td>
         <td>
           {{trans.isPromo}}
