--- a/src/app/pages/master/submission/claim-travel/claim-travel.component.html
+++ b/src/app/pages/master/submission/claim-travel/claim-travel.component.html
@@ -6,6 +6,14 @@
     <h5>Asuransi Perjalanan</h5>
   </div>
   <div *ngIf="isLoading" class="text-center">
+    <img src="/assets/img/spinner.gif" alt="description of gif" />
+  </div>
+
+  <div *ngIf="isLoadingReject" class="text-center">
+    <img src="/assets/img/loadings.gif" alt="description of gif" />
+  </div>
+
+  <div *ngIf="isLoadingApprove" class="text-center">
     <img src="/assets/img/loadings.gif" alt="description of gif" />
   </div>
 
@@ -91,9 +99,6 @@
                     claimTravel.transaction.transactionTravel.statusClaim==='disetujui'">
               <i class="fa fa-times" aria-hidden="true"></i>
             </button>
-            <div *ngIf="isLoading && claimTravel.transaction.transactionTravel.statusClaim==='Proses Persetujuan'" class="text-center">
-              <img src="/assets/img/loadings.gif" alt="description of gif" />
-            </div>
           </div>
         </td>
       </tr>
