[IMPROVE] view change status on package pa

--- a/src/app/pages/home/homepage/homepage.component.html
+++ b/src/app/pages/home/homepage/homepage.component.html
@@ -4,7 +4,7 @@
 
     <div class="logo mr-auto">
       <!--      <h1 class="text-light"><a href="index.html">M-ASK</a></h1>-->
-      <a href="index.html"><img style="background-image: url('../../../../assets/img/homepage/logo mask putih.png' )" alt="" class="img-fluid"></a>
+      <a href="index.html"><img src="assets/img/homepage/logo%20mask%20putih.png" alt="" class="img-fluid"></a>
     </div>
 <!--d-none-->
     <nav class="nav-menu navbar-expand-lg d-lg-block">
