--- a/src/app/pages/master/submission/claim-par/claim-par.component.html
+++ b/src/app/pages/master/submission/claim-par/claim-par.component.html
@@ -45,8 +45,8 @@
           <th>Tanggal Kejadian</th>
           <th>Penyebab Kerugian</th>
           <th>Lokasi Kerugian</th>
-          <th>Claim Submission</th>
-          <th>Claim Approval</th>
+          <th>Nilai Tuntutan Klaim</th>
+          <th>Nilai Persetujuan Klaim</th>
           <th>Status Klaim</th>
           <th>Laporan Uraian Kerugian</th>
           <th>Laporan Pihak Berwenang</th>
@@ -85,7 +85,8 @@
                     [disabled]="claimpar.transaction.transactionPAR.statusClaim==='disetujui' ||
                     claimpar.transaction.transactionPAR.statusClaim==='ditolak'">
               <i class="fa fa-check-square-o" aria-hidden="true"></i></button>&nbsp;
-            <button class="btn btn-danger float-right" (click)="rejectedClaimPAR(claimpar.claimparId)"
+            <button class="btn btn-danger float-right" data-toggle="modal" data-target="#exampleModal2"
+                    (click)="rejectedClaimPAR(claimpar.claimparId)"
                     [disabled]="claimpar.transaction.transactionPAR.statusClaim==='ditolak' ||
                     claimpar.transaction.transactionPAR.statusClaim==='disetujui'">
               <i class="fa fa-times" aria-hidden="true"></i></button>
@@ -119,6 +120,33 @@
           </div>
         </div>
       </div>
+      <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+           aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel2">Masukkan Alasan Penolakan Klaim</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <label>Deskripsi penolakan klaim</label>&nbsp;
+              <input type="text" [(ngModel)]="valueDescription">
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Batalkan</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onReject(valueDescription)">
+                Simpan</button>
+              <div *ngIf="isLoading" class="text-center">
+                <img src="/assets/img/loadings.gif" alt="description of gif" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <pagination-controls class="my-pagination" (pageChange)="onPageChange($event)"></pagination-controls>
       <!--Table-->
     </div>
@@ -139,8 +167,8 @@
           <th>Tanggal Kejadian</th>
           <th>Penyebab Kerugian</th>
           <th>Lokasi Kerugian</th>
-          <th>Claim Submission</th>
-          <th>Claim Approval</th>
+          <th>Nilai Tuntutan Klaim</th>
+          <th>Nilai Persetujuan Klaim</th>
           <th>Status Klaim</th>
           <th>Laporan Uraian Kerugian</th>
           <th>Laporan Pihak Berwenang</th>
@@ -179,9 +207,11 @@
                       [disabled]="claimpar.transaction.transactionPAR.statusClaim==='disetujui' ||
                     claimpar.transaction.transactionPAR.statusClaim==='ditolak'">
                 <i class="fa fa-check-square-o" aria-hidden="true"></i></button>&nbsp;
-              <button class="btn btn-danger float-right" (click)="rejectedClaimPAR(claimpar.claimparId)"
+              <button class="btn btn-danger float-right" data-toggle="modal" data-target="#exampleModal3"
+                      (click)="rejectedClaimPAR(claimpar.claimparId)"
                       [disabled]="claimpar.transaction.transactionPAR.statusClaim==='ditolak' ||
-                    claimpar.transaction.transactionPAR.statusClaim==='disetujui'">
+                    claimpar.transaction.transactionPAR.statusClaim==='disetujui'"
+              >
                 <i class="fa fa-times" aria-hidden="true"></i></button>
               <div *ngIf="isLoading && claimpar.transaction.transactionPAR.statusClaim==='Proses Persetujuan'" class="text-center">
                 <img src="/assets/img/loadings.gif" alt="description of gif" />
@@ -217,6 +247,33 @@
               <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onApproved(valueClaim)" [disabled]="valueClaim===''">Simpan Persetujuan</button>
               <div *ngIf="isLoading" class="text-center">
                 <img src="/assets/img/spinner.gif" alt="description of gif" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel3"
+           aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel3">Masukkan Alasan Penolakan Klaim</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <label>Deskripsi penolakan klaim</label>&nbsp;
+              <input type="text" [(ngModel)]="valueDescription">
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Batalkan</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="onReject(valueDescription)">
+                Simpan</button>
+              <div *ngIf="isLoading" class="text-center">
+                <img src="/assets/img/loadings.gif" alt="description of gif" />
               </div>
             </div>
           </div>
