--- a/src/app/pages/master/submission/claim-travel/claim-travel.component.html
+++ b/src/app/pages/master/submission/claim-travel/claim-travel.component.html
@@ -141,7 +141,7 @@
           </div>
           <div class="modal-body">
             <label>Deskripsi penolakan klaim</label>&nbsp;
-            <input type="text" [(ngModel)]="valueDescription">
+            <textarea name="text" rows="4" cols="60" wrap="soft" type="text" [(ngModel)]="valueDescription"></textarea>
 
           </div>
           <div class="modal-footer">
@@ -278,7 +278,7 @@
           </div>
           <div class="modal-body">
             <label>Deskripsi penolakan klaim</label>&nbsp;
-            <input type="text" [(ngModel)]="valueDescription">
+            <textarea name="text" rows="4" cols="60" wrap="soft" type="text" [(ngModel)]="valueDescription"></textarea>
 
           </div>
           <div class="modal-footer">
