--- a/src/app/pages/master/submission/claim-pa/claim-pa.component.html
+++ b/src/app/pages/master/submission/claim-pa/claim-pa.component.html
@@ -143,7 +143,7 @@
               </div>
               <div class="modal-body">
                 <label>Deskripsi penolakan klaim</label>&nbsp;
-                <input type="text" [(ngModel)]="valueDescription">
+                <textarea name="text" rows="4" cols="70" wrap="soft" type="text" [(ngModel)]="valueDescription"></textarea>
 
               </div>
               <div class="modal-footer">
@@ -285,7 +285,7 @@
               </div>
               <div class="modal-body">
                 <label>Deskripsi penolakan klaim</label>&nbsp;
-                <input type="text" [(ngModel)]="valueDescription">
+                <textarea name="text" rows="4" cols="70" wrap="soft" type="text" [(ngModel)]="valueDescription"></textarea>
 
               </div>
               <div class="modal-footer">
