--- a/src/app/pages/master/submission/claim-par/claim-par.component.html
+++ b/src/app/pages/master/submission/claim-par/claim-par.component.html
@@ -132,7 +132,7 @@
             </div>
             <div class="modal-body">
               <label>Deskripsi penolakan klaim</label>&nbsp;
-              <input type="text" [(ngModel)]="valueDescription">
+              <textarea name="text" rows="4" cols="50" wrap="soft" type="text" [(ngModel)]="valueDescription"></textarea>
 
             </div>
             <div class="modal-footer">
@@ -265,7 +265,7 @@
             </div>
             <div class="modal-body">
               <label>Deskripsi penolakan klaim</label>&nbsp;
-              <input type="text" [(ngModel)]="valueDescription">
+              <textarea name="text" rows="4" cols="50" wrap="soft" type="text" [(ngModel)]="valueDescription"></textarea>
 
             </div>
             <div class="modal-footer">
